--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@webpro/nx-tsc",
+  "name": "@obergodmar/nx-tsc",
   "version": "0.0.2",
   "description": "Nx executor to type-check project source files using tsc --noEmit",
   "main": "./index.js",
